# PMX_interface

./: CMakeLists.txt  LICENSE.md  README.md  client.py
src/: CMakeLists.txt  PMX_record_data.cpp
src/PMX_interface/: conversions.cpp  data_stream.cpp  interactive_commands.cpp  pmx_interface.cpp
src/include/PMX_interface/: pmx_interface.hpp
